Fix dark mode bug

--- a/app/assets/css/workspace.css
+++ b/app/assets/css/workspace.css
@@ -174,6 +174,7 @@
     margin-bottom: 16px;
     padding: 14px;
     position: relative;
+    border: 1px solid var(--lm-only-gray);
 }
 
 .workspace__board-list-task:hover {
